--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
     margin: 0px auto;
 }
 
+
+/*L'entête avec logo Reservia + bar de navigation*/
 #navigation {
     display: flex;
     justify-content: space-between;
@@ -60,6 +62,8 @@ h1 + p {
      margin-top: 5px;
 }
 
+/*Searchbar suvis de filtres*/
+
 #formSubmitButton {
     display: flex;
 }
@@ -99,7 +103,6 @@ h1 + p {
 #listFiltre {
     display: flex;
     align-items: center;
-    /* see responsive */
     font-weight: bold;
 }
 
@@ -134,6 +137,13 @@ h1 + p {
     padding: 10px;
 }
 
+.filtre .filtreChoice a {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    
+}
+
 .icons img {
     width: 25px;
     margin: auto;
@@ -151,6 +161,8 @@ h1 + p {
     border-radius: 100%;
     border: 2px solid #F2F2F2;
 }
+
+/*section avec images et informations pour hotel*/
 
 #section1 {
     display: flex;
@@ -189,6 +201,7 @@ article {
 
 .hotel h4 {
     margin: 1px;
+    padding: 10px 0 0 10px;
 }
 
 article h3 {
@@ -202,10 +215,12 @@ article h3 {
 
 .hotel p {
     margin: 2px;
+    padding: 2px 0 5px 10px;
 }
 
 .stars {
     display: flex;
+    padding: 0 0 0 10px;
 }
 
 .blueStar {
@@ -224,6 +239,8 @@ article h3 {
     background-repeat: no-repeat;
 }
 
+/*aside avec hotels les plus populaires*/
+
 aside {
 
     display: flex;
@@ -241,7 +258,7 @@ aside {
     display: flex;
     background-color: white;
     border-radius: 20px;
-    width: 300px;
+    width: 285px;
     border: white 2px solid;
     margin: 15px;
 }
@@ -263,14 +280,16 @@ aside h3 {
 
 .popular h4 {
     margin: 5px 0 0 0;
+    padding: 10px 0 0 10px;
 }
 
 .popular p {
     margin: 5px 0 0 0;
+    padding: 0 0 0 10px;
 }
 
 .popularInfo .stars {
-    margin-top: 20px
+    padding: 10px 0 0 10px;
 }
 
 #infoActivity {
@@ -290,6 +309,8 @@ aside h3 {
     width: 30px;
     margin: 30px;
 }
+
+/*section avec destinations et activités suggérés*/
 
 .longImg {
     background-color: white;
@@ -520,6 +541,7 @@ footer {
         height: 120px;
     }
 
+    /*Pied page avec infos*/
     #footerBlock {
         margin-top: 20px;
     }
